src/main/java/com/example/stream/spring/courses/reactive/example/model/error/CampusSuccess.java
package com.example.stream.spring.courses.reactive.example.model.error;

public sealed interface CampusSuccess extends Success permits CampusDeleteOk {
}
